[package]
name = "speed_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
simple_logger = "4.2.0"
toml = "0.7.5"
